5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1721_3036.log
== SUBMITION (2019-05-02 18:20:15) 
-- CODE:
x=float(input("valor de x"))
if(x<=-1);
  msg=x**2
	print(round(msg, 4))
elif(-1<0) and (x>1)
   msg= x
	print(round(msg, 4))
elif(x==0)
   msg>1
	print(round(msg, 4))
-- EXECUTION TIME:
0.163223
-- ERROR:
  File "/home/codebench/codes/1721/3036/main.py", line 2
    if(x<=-1);
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:21:07) 
-- CODE:
x=float(input("valor de x"))
if(x<=-1);
  msg=x**2
	print(round(msg, 4))
elif(-1<0) and (x>1) and (x<0)
   msg= x
	print(round(msg, 4))
elif(x==0)
   msg>1
	print(round(msg, 4))
-- EXECUTION TIME:
0.142422
-- ERROR:
  File "/home/codebench/codes/1721/3036/main.py", line 2
    if(x<=-1);
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
